<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.org.ukfederation</groupId>
    <artifactId>ukf-mda</artifactId>
    <version>0.6.1</version>
    <name>UK federation aggregator beans</name>
    <description>Collection of beans supporting metadata aggregation for the UK federation, based on the Shibboleth metadata aggregator framework.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <xerces.groupId>org.apache.xerces</xerces.groupId>
        <xerces.version>2.9.1</xerces.version>
        <spring.groupId>org.springframework</spring.groupId>
        <spring.version>3.0.5.RELEASE</spring.version>
    </properties>

    <repositories>
        <repository>
            <id>shib-release</id>
            <url>https://shibboleth.net/nexus/content/groups/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>shib-snapshot</id>
            <url>https://shibboleth.net/nexus/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <dependencies>
  
        <!-- Compile dependencies -->
        
        <dependency>
          <groupId>net.shibboleth.metadata</groupId>
          <artifactId>aggregator-pipeline</artifactId>
          <version>0.6</version>
          <scope>compile</scope>
        </dependency>
        
        <!-- Provided Dependencies -->
        
        <dependency>
            <groupId>net.jcip</groupId>
            <artifactId>jcip-annotations</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>${spring.groupId}</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${spring.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Runtime dependencies -->

        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>xml-apis</artifactId>
            <version>${xerces.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>${xerces.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>resolver</artifactId>
            <version>${xerces.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>serializer</artifactId>
            <version>${xerces.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.xalan</groupId>
            <artifactId>xalan</artifactId>
            <version>2.7.1</version>
            <scope>runtime</scope>
        </dependency>
        
        <!-- Test dependencies -->
        
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>5.9</version>
            <classifier>jdk15</classifier>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <dependency>
            <groupId>xmlunit</groupId>
            <artifactId>xmlunit</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        
        <!-- Managed Dependencies -->

    </dependencies>

    <build>
        <plugins>
        
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <compilerArgument>-Djava.endorsed.dirs="target/endorsed"</compilerArgument>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <argLine>-Djava.endorsed.dirs="target/endorsed"</argLine>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.2</version>
                <executions>
                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/endorsed</outputDirectory>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>xml-apis</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>xercesImpl</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>resolver</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>serializer</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.apache.xalan</groupId>
                                    <artifactId>xalan</artifactId>
                                    <version>2.7.1</version>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                    
                </executions>
            </plugin>
      
        </plugins>
    </build>

</project>
